<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/iv_flag"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher_round"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="1dp"
                android:ellipsize="none"
                android:padding="5dp"
                android:scrollHorizontally="false"
                android:text="@string/native_name"
                android:textSize="30sp"
                android:transitionName="nameTransition" />

            <TextView
                android:id="@+id/tv_alpha3Code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="1dp"
                android:padding="3dp"
                android:text="@string/alpha3Code"
                android:textSize="20sp"
                />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="5dp"
                    android:text="@string/capital_name"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_capital"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="5dp"
                    android:text="@string/capital_name"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="5dp"
                    android:text="@string/native_name"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_nativeName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="5dp"
                    android:text="@string/native_name"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="5dp"
                    android:text="@string/region"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_region"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="5dp"
                    android:text="@string/region"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="5dp"
                    android:text="@string/subRegion"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_sub_region"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="5dp"
                    android:text="@string/subRegion"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="5dp"
                    android:text="@string/nativeLanguage"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_nativeLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="5dp"
                    android:text="@string/nativeLanguage"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="5dp"
                    android:text="@string/currencyName"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_currencyName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="5dp"
                    android:text="@string/currencyName"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="5dp"
                    android:text="@string/currencySymbol"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_currencySymbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="5dp"
                    android:text="@string/currencySymbol"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="5dp"
                    android:text="@string/population"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_population"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="5dp"
                    android:text="@string/population"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="5dp"
                    android:text="@string/callingCodes"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_callingCodes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="5dp"
                    android:text="@string/callingCodes"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="5dp"
                    android:text="@string/timezones"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_timezones"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="5dp"
                    android:text="@string/timezones"
                    android:textSize="20sp" />

            </GridLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>

